# rockchip-mali

./: CMakeLists.txt
debian/: control  lib32mali-rk-midgard-4th-r13p0.install  lib32mali-rk-midgard-4th-r9p0.install  lib32mali-rk-utgard-2th-r7p0.install  lib32mali-rk-utgard-2th-r7p0.links  libmali-rk-dev.links
include/: .gitignore  CMakeLists.txt  arm.icd.cmake
include/FBDEV/: eglplatform.h
include/bifrost/: CMakeLists.txt
include/bifrost/arm/winsys_wayland/EGL/: eglplatform.h
include/midgard/: CMakeLists.txt
include/midgard/arm/winsys_dummy/EGL/: eglext.h  eglplatform.h
include/midgard/arm/winsys_fbdev/EGL/: eglext.h  eglplatform.h  mali_fbdev_types.h
include/midgard/arm/winsys_gbm/EGL/: eglplatform.h
include/midgard/arm/winsys_wayland/: weston-egl-ext.h
include/midgard/arm/winsys_wayland/EGL/: eglext.h  eglplatform.h
include/midgard/original/: xf86drm.h
include/midgard/original/CL/: cl.h  cl_ext.h  cl_gl.h  cl_platform.h  opencl.h
include/midgard/original/CL_1_2/CL/: cl_d3d10.h  cl_d3d11.h  cl_dx9_media_sharing.h  cl_egl.h  cl_ext.h  cl_gl.h
include/midgard/original/CL_2_0/CL/: cl.h
include/midgard/original/EGL/: egl.h  eglext.h  eglplatform.h
include/midgard/original/GLES/: gl.h  glplatform.h
include/midgard/original/GLES2/: gl2.h
include/midgard/original/X11/: DECkeysym.h  X.h  XF86keysym.h  Xalloca.h  Xarch.h  Xauth.h  Xfuncs.h  Xlibint.h  Xlocale.h  Xos.h  Xos_r.h  Xresource.h  Xwindows.h  Xwinsock.h  cursorfont.h  keysym.h
include/midgard/original/X11/Xtrans/: Xtrans.c  Xtranssock.c  Xtransutil.c  transport.c
include/midgard/original/X11/dri/: xf86dri.h  xf86driproto.h  xf86dristr.h
include/midgard/original/X11/extensions/: MITMisc.h  XI2.h  XKBfile.h  XKBgeom.h  XKBrules.h  XKBstr.h  XKM.h  XKMformat.h  XResproto.h  Xcomposite.h  Xdbe.h  Xeviestr.h  Xext.h  Xfixes.h  Xrender.h  XvMC.h  XvMCproto.h  Xvproto.h  agproto.h  bigreqstr.h  cup.h  damageproto.h  damagewire.h  dbe.h  dpmsconst.h  geproto.h  lbxproto.h  mitmiscconst.h  mitmiscproto.h  multibufproto.h  panoramiXext.h  panoramiXproto.h  renderproto.h  secur.h  security.h  securproto.h  shapeconst.h  shapeproto.h  shmstr.h  sync.h  (+11 more)
include/midgard/original/X11/fonts/: FS.h  FSproto.h  fntfil.h  fontenc.h  fontencc.h  fontmisc.h  fsmasks.h
include/midgard/original/vulkan/: vk_platform.h
include/midgard/original/xcb/: bigreq.h  dpms.h  dri2.h  present.h  randr.h  sync.h  xf86dri.h  xinerama.h  xkb.h  xprint.h
include/midgard/original/xorg/: BT.h  IBM.h  callback.h  client.h  closestr.h  closure.h  colormap.h  damage.h  dbestruct.h  dgaproc.h  dixaccess.h  dixfont.h  dixfontstr.h  dixgrabs.h  dixstruct.h  dri2.h  events.h  exa.h  exevents.h  extension.h  extnsionst.h  fboverlay.h  fbpict.h  gc.h  gcstruct.h  geext.h  globals.h  glx_extinit.h  hotplug.h  i2c_def.h  inputstr.h  list.h  micmap.h  miline.h  mioverlay.h  mipict.h  mipointer.h  mipointrst.h  miscstruct.h  mistruct.h  (+46 more)
include/original/CL/: cl_d3d10.h  cl_dx9_media_sharing.h  cl_gl_ext.h
include/original/CL_1_2/CL/: cl.h  cl_gl_ext.h  cl_platform.h  opencl.h
include/original/CL_2_0/CL/: cl.hpp  cl_d3d11.h  cl_dx9_media_sharing.h  cl_egl.h  cl_ext.h  cl_platform.h
include/original/GLES/: egl.h  glext.h
include/original/GLES2/: gl2.h  gl2ext.h  gl2platform.h
include/original/GLES3/: gl3.h  gl31.h  gl32.h  gl3platform.h
include/original/KHR/: khrplatform.h
include/original/vulkan/: GLSL.std.450.h  vulkan.h
include/utgard/: CMakeLists.txt
include/utgard/EGL/: egl_api_trace_format.h  fbdev_window.h  mali_egl.h  mali_eglext.h  mali_gbm.h  wayland_window.h
include/utgard/EGL/platform_android/EGL/: eglplatform.h
include/utgard/EGL/platform_drm/EGL/: eglplatform.h
include/utgard/EGL/platform_fbdev/EGL/: eglplatform.h
include/utgard/EGL/platform_wayland/EGL/: eglplatform.h
include/utgard/EGL/platform_x11/EGL/: eglplatform.h
include/utgard/GLES/: mali_egl.h  mali_egltypes.h  mali_gl.h  mali_glext.h  mali_glplatform.h  mali_glut.h
include/utgard/GLES2/: mali_gl2.h  mali_gl2ext.h  mali_gl2platform.h  mali_glut.h
include/utgard/GLES_GLES2/: mali_gl_gl2.h
lib/: CMakeLists.txt
pkgconfig/: CMakeLists.txt  OpenCL.pc.cmake  egl.pc.cmake  gbm.pc.cmake  gles_cm.pc.cmake  glesv2.pc.cmake  mali.pc.cmake  wayland-egl.pc.cmake
