cmake_minimum_required(VERSION 3.2)
find_package(PkgConfig)

PROJECT(MaliPkgInfo NONE)
INCLUDE(GNUInstallDirs)

CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/egl.pc.cmake"
	"${CMAKE_CURRENT_BINARY_DIR}/egl.pc" @ONLY)
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/gbm.pc.cmake"
	"${CMAKE_CURRENT_BINARY_DIR}/gbm.pc" @ONLY)
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/gles_cm.pc.cmake"
	"${CMAKE_CURRENT_BINARY_DIR}/gles_cm.pc" @ONLY)
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/glesv2.pc.cmake"
	"${CMAKE_CURRENT_BINARY_DIR}/glesv2.pc" @ONLY)
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/mali.pc.cmake"
	"${CMAKE_CURRENT_BINARY_DIR}/mali.pc" @ONLY)

INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/egl.pc"
"${CMAKE_CURRENT_BINARY_DIR}/gbm.pc"
"${CMAKE_CURRENT_BINARY_DIR}/gles_cm.pc"
"${CMAKE_CURRENT_BINARY_DIR}/glesv2.pc"
"${CMAKE_CURRENT_BINARY_DIR}/mali.pc"
DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig/")

if(GPU_FEATURE MATCHES "opencl")
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/OpenCL.pc.cmake"
	"${CMAKE_CURRENT_BINARY_DIR}/OpenCL.pc" @ONLY)

INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/OpenCL.pc"
DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig/")
endif(GPU_FEATURE MATCHES "opencl")
