cmake_minimum_required(VERSION 3.2)

Project(BifrostHeader NONE)
INCLUDE(GNUInstallDirs)

if(DP_FEATURE MATCHES "wayland")
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/arm/winsys_wayland/EGL"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/arm/winsys_wayland/weston-egl-ext.h"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
elseif(DP_FEATURE MATCHES "fbdev")
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/arm/winsys_fbdev/EGL"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
elseif(DP_FEATURE MATCHES "gbm")
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/arm/winsys_gbm/EGL"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
endif(DP_FEATURE MATCHES "wayland")
