cmake_minimum_required(VERSION 3.2)

Project(MidgardHeader NONE)
INCLUDE(GNUInstallDirs)

INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/original/EGL"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
PATTERN "eglplatform.h" EXCLUDE)

if(DP_FEATURE MATCHES "wayland")
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/arm/winsys_wayland/EGL"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/arm/winsys_wayland/weston-egl-ext.h"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
elseif(DP_FEATURE MATCHES "x11")
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/arm/winsys_x11/EGL"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
elseif(DP_FEATURE MATCHES "fbdev")
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/arm/winsys_fbdev/EGL"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
elseif(DP_FEATURE MATCHES "gbm")
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/arm/winsys_gbm/EGL"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
endif(DP_FEATURE MATCHES "wayland")

INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/original/KHR"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/original/GLES"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/original/GLES2"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/original/GLES3"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")

# Both Mali-T860 and Mali-T760 support up to OpenCL 1.2
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/original/CL"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
