cmake_minimum_required(VERSION 3.2)

Project(UtgardHeader NONE)
INCLUDE(GNUInstallDirs)

if(DP_FEATURE MATCHES "wayland")
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/EGL/platform_wayland/EGL"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
elseif(DP_FEATURE MATCHES "x11")
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/EGL/platform_x11/EGL/"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
elseif(DP_FEATURE MATCHES "fbdev")
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/EGL/platform_fbdev/EGL/"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
elseif(DP_FEATURE MATCHES "gdm")
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/EGL/platform_drm/EGL/"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
endif(DP_FEATURE MATCHES "wayland")
